[project]
name = "liteproxyllm"
version = "0.1.0"
description = "Lightweight Claude Code to OpenAI-compatible model mapping proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
liteproxyllm = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "config.py",
    "proxy.py",
    "schemas.py",
    "server.py",
    "README.md",
]
